[package]
name = "kalavara"
version = "0.1.0"
authors = ["Shanavas M <shanavas.m2@gmail.com>"]
edition = "2018"
repository = "https://github.com/shanavas786/kalavara"
keywords = ["keyvaluestore", "keyvalue", "persistent"]
description = "A distributed persistent key value store that speaks http."
license = "CC0-1.0"

[dependencies]
argparse = "0.2.2"
md5 = "0.6.1"
num_cpus = "1.0"
rand = "0.6"
rocksdb = "0.12.1"
tempfile = "3.0.7"
tiny_http = "0.6.2"

[dev-dependencies]
reqwest = "0.9.16"

[badges]
